--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "ember-data": "2.1.0",
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.3",
+    "ember-truth-helpers": "1.2.0",
     "emberfire": "1.6.0",
+    "emberx-select": "2.0.2",
     "torii": "0.6.1"
   }
 }
